[gd_scene load_steps=4 format=3 uid="uid://blwif7pvfhmuc"]

[ext_resource type="Script" path="res://garage/garage.gd" id="1_18buo"]
[ext_resource type="PackedScene" uid="uid://bfv7r6golysct" path="res://garage/ui_upgrade_item_list.tscn" id="1_t42ah"]
[ext_resource type="PackedScene" uid="uid://pt38kuekpumc" path="res://garage/ui_upgrade_item_details.tscn" id="2_f58g0"]

[node name="Garage" type="Node2D"]
script = ExtResource("1_18buo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIUpgradeItemList" parent="CanvasLayer" instance=ExtResource("1_t42ah")]
offset_left = 16.0
offset_top = 16.0
offset_right = 656.0
offset_bottom = 56.0

[node name="UIUpgradeItemDetails" parent="CanvasLayer" instance=ExtResource("2_f58g0")]

[node name="ButtonBack" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -66.0
offset_right = 103.0
grow_vertical = 0
text = "Back"

[connection signal="item_selected" from="CanvasLayer/UIUpgradeItemList" to="." method="_on_ui_upgrade_item_list_item_selected"]
[connection signal="pressed" from="CanvasLayer/ButtonBack" to="." method="_on_button_back_pressed"]
